--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <link rel="stylesheet" href="css/estilos.css">
   <body>
     <img src="img/header.jpg" alt="header">
+    <img src="img/hero.jpg" alt="hero">
   </body>
 </html>
