--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <img src="img/header.jpg" alt="header">
     <img src="img/hero.jpg" alt="hero">
+    <img src="img/acustica.jpg" alt="acustica">
   </body>
 </html>
