--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <link rel="stylesheet" href="css/estilos.css">
   <body>
-    <img src="img/header.jpg" alt="header">
-    <img src="img/hero.jpg" alt="hero">
+    <!-- <img src="img/header.jpg" alt="header">
+    <img src="img/hero.jpg" alt="hero"> -->
+    <img src="img/invie-responsive.png" alt="invie-responsive">
   </body>
 </html>
