--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   </head>
   <link rel="stylesheet" href="css/estilos.css">
   <body>
-    <img src="img/header.jpg" alt="header">
+    <!-- <img src="img/header.jpg" alt="header">
     <img src="img/hero.jpg" alt="hero">
-    <img src="img/acustica.jpg" alt="acustica">
+    <img src="img/acustica.jpg" alt="acustica"> -->
+    <img src="img/nueva-imagen.jpg" alt="nueva-imagen">
   </body>
 </html>
