--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invie</title>
   </head>
   <link rel="stylesheet" href="css/estilos.css">
   <body>
     <!-- <img src="img/header.jpg" alt="header">
     <img src="img/hero.jpg" alt="hero"> -->
-    <img src="img/invie-responsive.png" alt="invie-responsive">
+    <img src="img/invie-responsive.png" alt="invie-responsive" id="responsive">
   </body>
 </html>
