Agregando datos a la bibliografía

--- a/index.html
+++ b/index.html
@@ -13,3 +13,12 @@
     <img src="img/nueva-imagen.jpg" alt="nueva-imagen">
   </body>
 </html>
+
+<!--
+
+Bibliografía:
+gitignore:
+https://www.gitignore.io/
+
+
+-->
